objects/DataDotComDemoHelper__c.object
<CustomObject>
    <description>This Object is Used to facilitate lookups in the data.com demo configuration page only. At no stage should a tab or record be created.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DataDotComDemoHelpers</relationshipLabel>
        <relationshipName>DataDotComDemoHelpers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DataDotComDemoHelpers</relationshipLabel>
        <relationshipName>DataDotComDemoHelpers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>DataDotComDemoHelpers</relationshipLabel>
        <relationshipName>DataDotComDemoHelpers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reset_Date__c</fullName>
        <label>Reset Date</label>
        <type>Date</type>
    </fields>
    <label>DataDotComDemoHelper</label>
    <nameField>
        <displayFormat>DDC-{0000}</displayFormat>
        <label>DataDotComDemoHelper Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DataDotComDemoHelpers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>